--- a/webmaerd/templates/base/head.html
+++ b/webmaerd/templates/base/head.html
@@ -5,7 +5,7 @@
     <meta name="description" content="Webster - Responsive Multi-purpose HTML5 Template"/>
     <meta name="author" content="potenzaglobalsolutions.com"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
-    <title>Webster - Responsive Multi-purpose HTML5 Template</title>
+    <title>Webmaerd - web development agency</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="/static/images/favicon.ico"/>
@@ -27,6 +27,4 @@
     <link rel="stylesheet" type="text/css" href="/static/css/responsive.css"/>
     <!-- Custom -->
     <link rel="stylesheet" type="text/css" href="/static/css/custom.css"/>
-
-
 </head>
