--- a/webmaerd/templates/faq.html
+++ b/webmaerd/templates/faq.html
@@ -5,18 +5,17 @@
 page-title-->
 
 <section class="page-title bg-overlay-black-60 parallax" data-jarallax='{"speed": 0.6}'
-         style="background-image: url(/static/images/bg/02.jpg);">
+         style="background-image: url(/static/images/bg/01.jpg);">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
                 <div class="page-title-name">
-                    <h1>Faqs 02</h1>
-                    <p>We know the secret of your success</p>
+                    <h1>FAQ</h1>
+                    <p>Answers to frequently asked questions</p>
                 </div>
                 <ul class="page-breadcrumb">
-                    <li><a href="#"><i class="fa fa-home"></i> Home</a> <i class="fa fa-angle-double-right"></i></li>
-                    <li><a href="#">page</a> <i class="fa fa-angle-double-right"></i></li>
-                    <li><span>Faqs 02</span></li>
+                    <li><a href="/"><i class="fa fa-home"></i> Home</a> <i class="fa fa-angle-double-right"></i></li>
+                    <li><span>FAQ</span></li>
                 </ul>
             </div>
         </div>
@@ -36,7 +35,7 @@ page-title -->
                 <div class="section-title text-center">
                     <h6>Have a question?</h6>
                     <h2 class="title-effect">Frequently Asked Questions</h2>
-                    <p>why the sky's the limit when using Webster.</p>
+                    <p>Answers to frequently asked questions about cooperation with us.</p>
                 </div>
             </div>
         </div>
@@ -44,136 +43,47 @@ page-title -->
             <div class="col-lg-12 col-md-12">
                 <div class="accordion shadow">
                     <div class="acd-group acd-active">
-                        <a href="#" class="acd-heading">01. Morbi accumsan ipsum velit?</a>
+                        <a href="#" class="acd-heading">01. What is the cost of the services?</a>
                         <div class="acd-des">
-                            <h5>Amet of lorem ipsum dolor sit lorem ipsum?</h5>
-                            <p>Proin gravida lorem ipsum dolor sit amet of Lorem Ipsum nibh vel velit auctor aliquet.
-                                Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis
-                                sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi
-                                accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non
-                                mauris vitae erat </p>
+                            <h5>What is the cost of the services? How much does it cost to create a website?</h5>
+                            <p>The price depends on many factors, so the cost of services is assessed individually for
+                                each project. For example the cost of the project is calculated from its:
+                            </p>
                             <ul class="list list-unstyled list-mark">
-                                <li> Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis
-                                    bibendum
-                                </li>
-                                <li> Auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</li>
-                                <li> Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
-                                    ipsum velit.
-                                </li>
-                                <li> Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat
-                                    consequat auctor eu in elit Class.
-                                </li>
+                                <li> Complexity</li>
+                                <li> Functionality</li>
+                                <li> Lead time</li>
+                                <li> additional customer requests</li>
                             </ul>
+                            <p>
+                            For example, the cost of sites in our portfolio starts from $ 500
+                            </p>
                         </div>
                     </div>
                     <div class="acd-group">
-                        <a href="#" class="acd-heading">02. Nam nec tellus a odio tincidunt?</a>
-                        <div class="acd-des"><h5>Amet of lorem ipsum dolor sit lorem ipsum?</h5>
-                            <p>Proin gravida lorem ipsum dolor sit amet of Lorem Ipsum nibh vel velit auctor aliquet.
-                                Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis
-                                sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi
-                                accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non
-                                mauris vitae erat </p>
-                            <ul class="list list-unstyled list-mark">
-                                <li> Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis
-                                    bibendum
-                                </li>
-                                <li> Auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</li>
-                                <li> Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
-                                    ipsum velit.
-                                </li>
-                                <li> Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat
-                                    consequat auctor eu in elit Class.
-                                </li>
-                            </ul>
+                        <a href="#" class="acd-heading">02. How to estimate the approximate cost of an order?</a>
+                        <div class="acd-des"><h5>How to estimate the approximate cost of an order?</h5>
+                            <p>In the near future we will create a questionnaire filling out which you will be able to
+                                estimate the approximate cost of your project.</p>
                         </div>
                     </div>
                     <div class="acd-group">
-                        <a href="#" class="acd-heading">03. Aenean sollicitudin, lorem quis?</a>
-                        <div class="acd-des"><h5>Amet of lorem ipsum dolor sit lorem ipsum?</h5>
-                            <p>Proin gravida lorem ipsum dolor sit amet of Lorem Ipsum nibh vel velit auctor aliquet.
-                                Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis
-                                sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi
-                                accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non
-                                mauris vitae erat </p>
-                            <ul class="list list-unstyled list-mark">
-                                <li> Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis
-                                    bibendum
-                                </li>
-                                <li> Auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</li>
-                                <li> Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
-                                    ipsum velit.
-                                </li>
-                                <li> Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat
-                                    consequat auctor eu in elit Class.
-                                </li>
-                            </ul>
+                        <a href="#" class="acd-heading">03. How long does it take to create a website?</a>
+                        <div class="acd-des"><h5>How long will it take for you to complete the order for the creation of
+                            the site?</h5>
+                            <p>The lead time depends on the complexity of the project. A simple site-visit, we do about
+                                one week. The implementation of sites of medium complexity - one or two weeks.
+                                Implementation of complex projects can take up to one to two months.</p>
                         </div>
                     </div>
                     <div class="acd-group">
-                        <a href="#" class="acd-heading">04. Nibh vulputate cursus a sit amet?</a>
+                        <a href="#" class="acd-heading">04. How is the service paid?</a>
                         <div class="acd-des"><h5>Amet of lorem ipsum dolor sit lorem ipsum?</h5>
-                            <p>Proin gravida lorem ipsum dolor sit amet of Lorem Ipsum nibh vel velit auctor aliquet.
-                                Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis
-                                sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi
-                                accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non
-                                mauris vitae erat </p>
-                            <ul class="list list-unstyled list-mark">
-                                <li> Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis
-                                    bibendum
-                                </li>
-                                <li> Auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</li>
-                                <li> Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
-                                    ipsum velit.
-                                </li>
-                                <li> Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat
-                                    consequat auctor eu in elit Class.
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="acd-group">
-                        <a href="#" class="acd-heading">05. Aenean sollicitudin, lorem quis?</a>
-                        <div class="acd-des"><h5>Amet of lorem ipsum dolor sit lorem ipsum?</h5>
-                            <p>Proin gravida lorem ipsum dolor sit amet of Lorem Ipsum nibh vel velit auctor aliquet.
-                                Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis
-                                sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi
-                                accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non
-                                mauris vitae erat </p>
-                            <ul class="list list-unstyled list-mark">
-                                <li> Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis
-                                    bibendum
-                                </li>
-                                <li> Auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</li>
-                                <li> Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
-                                    ipsum velit.
-                                </li>
-                                <li> Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat
-                                    consequat auctor eu in elit Class.
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="acd-group">
-                        <a href="#" class="acd-heading">06. Duis sed odio sit amet nibh?</a>
-                        <div class="acd-des"><h5>Amet of lorem ipsum dolor sit lorem ipsum?</h5>
-                            <p>Proin gravida lorem ipsum dolor sit amet of Lorem Ipsum nibh vel velit auctor aliquet.
-                                Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis
-                                sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi
-                                accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non
-                                mauris vitae erat </p>
-                            <ul class="list list-unstyled list-mark">
-                                <li> Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis
-                                    bibendum
-                                </li>
-                                <li> Auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</li>
-                                <li> Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
-                                    ipsum velit.
-                                </li>
-                                <li> Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat
-                                    consequat auctor eu in elit Class.
-                                </li>
-                            </ul>
+                            <p>First, we negotiate your project with you, agree on the price. Further we conclude with
+                                you the contract on rendering of services. You make a prepayment of 10% of the order
+                                value. We make a website. When the site is made and you approve it you pay us the
+                                remaining amount, and we give you access to the site, and also send the code and files
+                                of the site.</p>
                         </div>
                     </div>
                 </div>
@@ -200,14 +110,14 @@ action box- -->
         <div class="row">
             <div class="col-lg-12 col-md-12">
                 <div class="action-box-text">
-                    <h3><strong> Webster: </strong> The most powerful template ever on the market</h3>
-                    <p>Create tailor-cut websites with the exclusive multi-purpose responsive template along with
-                        powerful features.</p>
+                    <h3><strong> Webmaerd: </strong> Modern web development and web design</h3>
+                    <p>You can order website creation, web design, purchase and domain settings, help in placing the
+                        site on the hosting, assistance in setting up mail for your domain.</p>
                 </div>
                 <div class="action-box-button">
-                    <a class="button button-border white" href="#">
-                        <span>Purchase Now</span>
-                        <i class="fa fa-download"></i>
+                    <a class="button button-border white" href="/contact">
+                        <span>Contact US</span>
+                        <i class="fa fa-envelope-o"></i>
                     </a>
                 </div>
             </div>
