--- a/webmaerd/templates/index.html
+++ b/webmaerd/templates/index.html
@@ -5,7 +5,7 @@
  banner -->
 
 <section class="slider-parallax typer-banner business bg-overlay-black-50 parallax" data-jarallax='{"speed": 0.6}'
-         style="background-image: url(/static/images/bg/18.jpg);">
+         style="background-image: url(/static/images/bg/01.jpg);">
     <div class="slider-content-middle">
         <div class="container">
             <div class="row">
@@ -145,7 +145,7 @@ custom-content -->
         <div class="row">
             <div class="col-lg-4">
                 <div class="portfolio-title section-title mt-md-5">
-                    <h6>Super creative</h6>
+                    <h6>Creative and modern</h6>
                     <h2 class="title-effect">Our Latest Works</h2>
                     <p class="mb-20">Our portfolio presents our latest work, which you can see and evaluate. We approach
                         each project carefully and diligently.</p>
@@ -260,14 +260,14 @@ most Awesome- -->
                 <div class="row mt-30">
                     <div class="col-sm-6">
                         <ul class="list list-unstyled list-hand">
-                            <li class="text-white"> Award-winning design</li>
-                            <li class="text-white"> Super Fast Customer support</li>
+                            <li class="text-white"> High-quality web development</li>
+                            <li class="text-white"> Modern design</li>
                         </ul>
                     </div>
                     <div class="col-sm-6">
                         <ul class="list list-unstyled list-hand">
-                            <li class="text-white"> Easy to Customize pages</li>
-                            <li class="text-white"> Powerful Performance</li>
+                            <li class="text-white"> Support with domain</li>
+                            <li class="text-white"> Support with hosting</li>
                         </ul>
                     </div>
                 </div>
