--- a/webmaerd/templates/portfolio.html
+++ b/webmaerd/templates/portfolio.html
@@ -5,18 +5,17 @@
 page-title-->
 
 <section class="page-title bg-overlay-black-60 parallax" data-jarallax='{"speed": 0.6}'
-         style="background-image: url(/static/images/bg/02.jpg);">
+         style="background-image: url(/static/images/bg/01.jpg);">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
                 <div class="page-title-name">
-                    <h1>portfolio classic 2 columns fullwidth</h1>
-                    <p>We know the secret of your success</p>
+                    <h1>Our Portfolio</h1>
+                    <p>Our Latest Works</p>
                 </div>
                 <ul class="page-breadcrumb">
-                    <li><a href="#"><i class="fa fa-home"></i> Home</a> <i class="fa fa-angle-double-right"></i></li>
-                    <li><a href="#">portfolio</a> <i class="fa fa-angle-double-right"></i></li>
-                    <li><span>portfolio classic 2 columns fullwidth</span></li>
+                    <li><a href="/"><i class="fa fa-home"></i> Home</a> <i class="fa fa-angle-double-right"></i></li>
+                    <li><span>Portfolio</span></li>
                 </ul>
             </div>
         </div>
@@ -203,14 +202,14 @@ action box- -->
         <div class="row">
             <div class="col-lg-12 col-md-12">
                 <div class="action-box-text">
-                    <h3><strong> Webster: </strong> The most powerful template ever on the market</h3>
-                    <p>Create tailor-cut websites with the exclusive multi-purpose responsive template along with
-                        powerful features.</p>
+                    <h3><strong> Webmaerd: </strong> Modern web development and web design</h3>
+                    <p>You can order website creation, web design, purchase and domain settings, help in placing the
+                        site on the hosting, assistance in setting up mail for your domain.</p>
                 </div>
                 <div class="action-box-button">
-                    <a class="button button-border white" href="#">
-                        <span>Purchase Now</span>
-                        <i class="fa fa-download"></i>
+                    <a class="button button-border white" href="/contact">
+                        <span>Contact US</span>
+                        <i class="fa fa-envelope-o"></i>
                     </a>
                 </div>
             </div>
