--- a/webmaerd/templates/contact.html
+++ b/webmaerd/templates/contact.html
@@ -5,18 +5,17 @@
 page-title-->
 
 <section class="page-title bg-overlay-black-60 parallax" data-jarallax='{"speed": 0.6}'
-         style="background-image: url(/static/images/bg/02.jpg);">
+         style="background-image: url(/static/images/bg/01.jpg);">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
                 <div class="page-title-name">
-                    <h1>Contact 05</h1>
+                    <h1>Contact</h1>
                     <p>We know the secret of your success</p>
                 </div>
                 <ul class="page-breadcrumb">
-                    <li><a href="#"><i class="fa fa-home"></i> Home</a> <i class="fa fa-angle-double-right"></i></li>
-                    <li><a href="#">page</a> <i class="fa fa-angle-double-right"></i></li>
-                    <li><span>Contact 05</span></li>
+                    <li><a href="/"><i class="fa fa-home"></i> Home</a> <i class="fa fa-angle-double-right"></i></li>
+                    <li><span>Contact</span></li>
                 </ul>
             </div>
         </div>
@@ -35,7 +34,7 @@ page-title -->
         <div class="row">
             <div class="col-12">
                 <div class="office-1 black-bg parallax full-width mb-5 sm-mb-20 bg-overlay-black-60 parallax"
-                     style="background: url(/static/images/bg/06.jpg);">
+                     style="background: url(/static/images/bg/02.jpg);">
                     <div class="touch-in">
                         <div class="row">
                             <div class="col-lg-4 col-md-4">
@@ -144,7 +143,7 @@ feature- -->
                     <div class="feature-info">
                         <h5 class="text-back">New york</h5>
                         <p> 17504 Carlton Cuevas Rd, MS 39503</p>
-                        <p class="mt-15">+(804) 178-1249</p>
+                        <p class="mt-15">+(000) 000-0000</p>
                     </div>
                 </div>
             </div>
@@ -153,7 +152,7 @@ feature- -->
                     <div class="feature-info">
                         <h5 class="text-back">London</h5>
                         <p>1234 North Avenue Luke, IN 360001</p>
-                        <p class="mt-15">+(905) 379-4349</p>
+                        <p class="mt-15">+(000) 000-0000</p>
                     </div>
                 </div>
             </div>
@@ -162,7 +161,7 @@ feature- -->
                     <div class="feature-info">
                         <h5 class="text-back">Paris</h5>
                         <p>44 Shirley Ave. West Chicago, IL 60185</p>
-                        <p class="mt-15">+(704) 279-1249</p>
+                        <p class="mt-15">+(000) 000-0000</p>
                     </div>
                 </div>
             </div>
@@ -178,14 +177,14 @@ action box- -->
         <div class="row">
             <div class="col-lg-12 col-md-12">
                 <div class="action-box-text">
-                    <h3><strong> Webster: </strong> The most powerful template ever on the market</h3>
-                    <p>Create tailor-cut websites with the exclusive multi-purpose responsive template along with
-                        powerful features.</p>
+                    <h3><strong> Webmaerd: </strong> Modern web development and web design</h3>
+                    <p>You can order website creation, web design, purchase and domain settings, help in placing the
+                        site on the hosting, assistance in setting up mail for your domain.</p>
                 </div>
                 <div class="action-box-button">
-                    <a class="button button-border white" href="#">
-                        <span>Purchase Now</span>
-                        <i class="fa fa-download"></i>
+                    <a class="button button-border white" href="/contact">
+                        <span>Contact US</span>
+                        <i class="fa fa-envelope-o"></i>
                     </a>
                 </div>
             </div>
