added pictures for portfolio

--- a/webmaerd/templates/portfolio.html
+++ b/webmaerd/templates/portfolio.html
@@ -48,7 +48,7 @@ page-title -->
                                 <span class="text-white"> <a href="#"> Branding </a> | <a
                                         href="#"> Web Design </a> </span>
                             </div>
-                            <a class="popup portfolio-img" href="/static/imagesportfolio/small/01.jpg"><i
+                            <a class="popup portfolio-img" href="/static/images/portfolio/small/01.jpg"><i
                                     class="fa fa-arrows-alt"></i></a>
                         </div>
                     </div>
@@ -60,7 +60,7 @@ page-title -->
                                 <span class="text-white"> <a href="#"> Branding </a> | <a
                                         href="#"> Web Design </a> </span>
                             </div>
-                            <a class="popup portfolio-img" href="/static/imagesportfolio/small/02.jpg"><i
+                            <a class="popup portfolio-img" href="/static/images/portfolio/small/02.jpg"><i
                                     class="fa fa-arrows-alt"></i></a>
                         </div>
                     </div>
@@ -72,19 +72,19 @@ page-title -->
                                 <span class="text-white"> <a href="#"> Branding </a> | <a
                                         href="#"> Web Design </a> </span>
                             </div>
-                            <a class="popup portfolio-img" href="/static/imagesportfolio/small/03.jpg"><i
+                            <a class="popup portfolio-img" href="/static/images/portfolio/small/03.jpg"><i
                                     class="fa fa-arrows-alt"></i></a>
                         </div>
                     </div>
                     <div class="grid-item illustration">
                         <div class="portfolio-item">
-                            <img src="/static/images/portfolio/small/04.gif" alt="">
+                            <img src="/static/images/portfolio/small/04.jpg" alt="">
                             <div class="portfolio-overlay">
                                 <h4 class="text-white"><a href="portfolio-single-01.html"> Your title here </a></h4>
                                 <span class="text-white"> <a href="#"> Branding </a> | <a
                                         href="#"> Web Design </a> </span>
                             </div>
-                            <a class="popup portfolio-img" href="/static/imagesportfolio/small/04.gif"><i
+                            <a class="popup portfolio-img" href="/static/images/portfolio/small/04.jpg"><i
                                     class="fa fa-arrows-alt"></i></a>
                         </div>
                     </div>
@@ -96,7 +96,7 @@ page-title -->
                                 <span class="text-white"> <a href="#"> Branding </a> | <a
                                         href="#"> Web Design </a> </span>
                             </div>
-                            <a class="popup portfolio-img" href="/static/imagesportfolio/small/05.jpg"><i
+                            <a class="popup portfolio-img" href="/static/images/portfolio/small/05.jpg"><i
                                     class="fa fa-arrows-alt"></i></a>
                         </div>
                     </div>
@@ -108,7 +108,7 @@ page-title -->
                                 <span class="text-white"> <a href="#"> Branding </a> | <a
                                         href="#"> Web Design </a> </span>
                             </div>
-                            <a class="popup portfolio-img" href="/static/imagesportfolio/small/06.jpg"><i
+                            <a class="popup portfolio-img" href="/static/images/portfolio/small/06.jpg"><i
                                     class="fa fa-arrows-alt"></i></a>
                         </div>
                     </div>
@@ -120,7 +120,7 @@ page-title -->
                                 <span class="text-white"> <a href="#"> Branding </a> | <a
                                         href="#"> Web Design </a> </span>
                             </div>
-                            <a class="popup portfolio-img" href="/static/imagesportfolio/small/07.jpg"><i
+                            <a class="popup portfolio-img" href="/static/images/portfolio/small/07.jpg"><i
                                     class="fa fa-arrows-alt"></i></a>
                         </div>
                     </div>
@@ -132,7 +132,7 @@ page-title -->
                                 <span class="text-white"> <a href="#"> Branding </a> | <a
                                         href="#"> Web Design </a> </span>
                             </div>
-                            <a class="popup portfolio-img" href="/static/imagesportfolio/small/08.gif"><i
+                            <a class="popup portfolio-img" href="/static/images/portfolio/small/08.gif"><i
                                     class="fa fa-arrows-alt"></i></a>
                         </div>
                     </div>
@@ -144,7 +144,7 @@ page-title -->
                                 <span class="text-white"> <a href="#"> Branding </a> | <a
                                         href="#"> Web Design </a> </span>
                             </div>
-                            <a class="popup portfolio-img" href="/static/imagesportfolio/small/01.jpg"><i
+                            <a class="popup portfolio-img" href="/static/images/portfolio/small/01.jpg"><i
                                     class="fa fa-arrows-alt"></i></a>
                         </div>
                     </div>
@@ -156,7 +156,7 @@ page-title -->
                                 <span class="text-white"> <a href="#"> Branding </a> | <a
                                         href="#"> Web Design </a> </span>
                             </div>
-                            <a class="popup portfolio-img" href="/static/imagesportfolio/small/02.jpg"><i
+                            <a class="popup portfolio-img" href="/static/images/portfolio/small/02.jpg"><i
                                     class="fa fa-arrows-alt"></i></a>
                         </div>
                     </div>
@@ -168,7 +168,7 @@ page-title -->
                                 <span class="text-white"> <a href="#"> Branding </a> | <a
                                         href="#"> Web Design </a> </span>
                             </div>
-                            <a class="popup portfolio-img" href="/static/imagesportfolio/small/03.jpg"><i
+                            <a class="popup portfolio-img" href="/static/images/portfolio/small/03.jpg"><i
                                     class="fa fa-arrows-alt"></i></a>
                         </div>
                     </div>
@@ -180,7 +180,7 @@ page-title -->
                                 <span class="text-white"> <a href="#"> Branding </a> | <a
                                         href="#"> Web Design </a> </span>
                             </div>
-                            <a class="popup portfolio-img" href="/static/imagesportfolio/small/05.jpg"><i
+                            <a class="popup portfolio-img" href="/static/images/portfolio/small/05.jpg"><i
                                     class="fa fa-arrows-alt"></i></a>
                         </div>
                     </div>
