--- a/webmaerd/templates/index.html
+++ b/webmaerd/templates/index.html
@@ -198,12 +198,12 @@ custom-content -->
                     </div>
                     <div class="grid-item">
                         <div class="portfolio-item">
-                            <img src="/static/images/portfolio/small/04.gif" alt="">
+                            <img src="/static/images/portfolio/small/04.jpg" alt="">
                             <div class="portfolio-overlay">
                                 <h4 class="text-white"><a href="portfolio-single-01.html"> Post GIF image</a></h4>
                                 <span class="text-white"> <a href="#"> Animation </a>| <a href="#">GIF </a> </span>
                             </div>
-                            <a class="popup portfolio-img" href="images/portfolio/small/04.gif"><i
+                            <a class="popup portfolio-img" href="images/portfolio/small/04.jpg"><i
                                     class="fa fa-arrows-alt"></i></a>
                         </div>
                     </div>
