--- a/webmaerd/templates/portfolio.html
+++ b/webmaerd/templates/portfolio.html
@@ -32,158 +32,19 @@ page-title -->
     <div class="container">
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 text-center">
-                <div class="isotope-filters">
-                    <button data-filter="" class="active">All</button>
-                    <button data-filter=".photography">photography</button>
-                    <button data-filter=".illustration">illustration</button>
-                    <button data-filter=".branding">branding</button>
-                    <button data-filter=".web-design">web-design</button>
-                </div>
                 <div class="isotope columns-2 popup-gallery">
-                    <div class="grid-item photography branding">
+                    {% for i in projects %}
+                    <div class="grid-item">
                         <div class="portfolio-item">
-                            <img src="/static/images/portfolio/small/01.jpg" alt="">
+                            <img src="{{ i.image.url }}" alt="{{ i.title }}">
                             <div class="portfolio-overlay">
-                                <h4 class="text-white"><a href="portfolio-single-01.html"> Your title here </a></h4>
-                                <span class="text-white"> <a href="#"> Branding </a> | <a
-                                        href="#"> Web Design </a> </span>
+                                <h4 class="text-white"><a href="{{ i.url }}"> {{ i.title }} </a></h4>
+                                <span class="text-white"> {{ i.text }} </span>
                             </div>
-                            <a class="popup portfolio-img" href="/static/images/portfolio/small/01.jpg"><i
-                                    class="fa fa-arrows-alt"></i></a>
+                            <a class="popup portfolio-img" href="{{ i.image.url }}"><i class="fa fa-arrows-alt"></i></a>
                         </div>
                     </div>
-                    <div class="grid-item photography branding">
-                        <div class="portfolio-item">
-                            <img src="/static/images/portfolio/small/02.jpg" alt="">
-                            <div class="portfolio-overlay">
-                                <h4 class="text-white"><a href="portfolio-single-01.html"> Your title here </a></h4>
-                                <span class="text-white"> <a href="#"> Branding </a> | <a
-                                        href="#"> Web Design </a> </span>
-                            </div>
-                            <a class="popup portfolio-img" href="/static/images/portfolio/small/02.jpg"><i
-                                    class="fa fa-arrows-alt"></i></a>
-                        </div>
-                    </div>
-                    <div class="grid-item illustration">
-                        <div class="portfolio-item">
-                            <img src="/static/images/portfolio/small/03.jpg" alt="">
-                            <div class="portfolio-overlay">
-                                <h4 class="text-white"><a href="portfolio-single-01.html"> Your title here </a></h4>
-                                <span class="text-white"> <a href="#"> Branding </a> | <a
-                                        href="#"> Web Design </a> </span>
-                            </div>
-                            <a class="popup portfolio-img" href="/static/images/portfolio/small/03.jpg"><i
-                                    class="fa fa-arrows-alt"></i></a>
-                        </div>
-                    </div>
-                    <div class="grid-item illustration">
-                        <div class="portfolio-item">
-                            <img src="/static/images/portfolio/small/04.jpg" alt="">
-                            <div class="portfolio-overlay">
-                                <h4 class="text-white"><a href="portfolio-single-01.html"> Your title here </a></h4>
-                                <span class="text-white"> <a href="#"> Branding </a> | <a
-                                        href="#"> Web Design </a> </span>
-                            </div>
-                            <a class="popup portfolio-img" href="/static/images/portfolio/small/04.jpg"><i
-                                    class="fa fa-arrows-alt"></i></a>
-                        </div>
-                    </div>
-                    <div class="grid-item branding illustration">
-                        <div class="portfolio-item">
-                            <img src="/static/images/portfolio/small/05.jpg" alt="">
-                            <div class="portfolio-overlay">
-                                <h4 class="text-white"><a href="portfolio-single-01.html"> Your title here </a></h4>
-                                <span class="text-white"> <a href="#"> Branding </a> | <a
-                                        href="#"> Web Design </a> </span>
-                            </div>
-                            <a class="popup portfolio-img" href="/static/images/portfolio/small/05.jpg"><i
-                                    class="fa fa-arrows-alt"></i></a>
-                        </div>
-                    </div>
-                    <div class="grid-item branding illustration">
-                        <div class="portfolio-item">
-                            <img src="/static/images/portfolio/small/06.jpg" alt="">
-                            <div class="portfolio-overlay">
-                                <h4 class="text-white"><a href="portfolio-single-01.html"> Your title here </a></h4>
-                                <span class="text-white"> <a href="#"> Branding </a> | <a
-                                        href="#"> Web Design </a> </span>
-                            </div>
-                            <a class="popup portfolio-img" href="/static/images/portfolio/small/06.jpg"><i
-                                    class="fa fa-arrows-alt"></i></a>
-                        </div>
-                    </div>
-                    <div class="grid-item web-design photography">
-                        <div class="portfolio-item">
-                            <img src="/static/images/portfolio/small/07.jpg" alt="">
-                            <div class="portfolio-overlay">
-                                <h4 class="text-white"><a href="portfolio-single-01.html"> Your title here </a></h4>
-                                <span class="text-white"> <a href="#"> Branding </a> | <a
-                                        href="#"> Web Design </a> </span>
-                            </div>
-                            <a class="popup portfolio-img" href="/static/images/portfolio/small/07.jpg"><i
-                                    class="fa fa-arrows-alt"></i></a>
-                        </div>
-                    </div>
-                    <div class="grid-item web-design photography">
-                        <div class="portfolio-item">
-                            <img src="/static/images/portfolio/small/08.gif" alt="">
-                            <div class="portfolio-overlay">
-                                <h4 class="text-white"><a href="portfolio-single-01.html"> Your title here </a></h4>
-                                <span class="text-white"> <a href="#"> Branding </a> | <a
-                                        href="#"> Web Design </a> </span>
-                            </div>
-                            <a class="popup portfolio-img" href="/static/images/portfolio/small/08.gif"><i
-                                    class="fa fa-arrows-alt"></i></a>
-                        </div>
-                    </div>
-                    <div class="grid-item web-design photography">
-                        <div class="portfolio-item">
-                            <img src="/static/images/portfolio/small/01.jpg" alt="">
-                            <div class="portfolio-overlay">
-                                <h4 class="text-white"><a href="portfolio-single-01.html"> Your title here </a></h4>
-                                <span class="text-white"> <a href="#"> Branding </a> | <a
-                                        href="#"> Web Design </a> </span>
-                            </div>
-                            <a class="popup portfolio-img" href="/static/images/portfolio/small/01.jpg"><i
-                                    class="fa fa-arrows-alt"></i></a>
-                        </div>
-                    </div>
-                    <div class="grid-item web-design photography">
-                        <div class="portfolio-item">
-                            <img src="/static/images/portfolio/small/02.jpg" alt="">
-                            <div class="portfolio-overlay">
-                                <h4 class="text-white"><a href="portfolio-single-01.html"> Your title here </a></h4>
-                                <span class="text-white"> <a href="#"> Branding </a> | <a
-                                        href="#"> Web Design </a> </span>
-                            </div>
-                            <a class="popup portfolio-img" href="/static/images/portfolio/small/02.jpg"><i
-                                    class="fa fa-arrows-alt"></i></a>
-                        </div>
-                    </div>
-                    <div class="grid-item web-design photography">
-                        <div class="portfolio-item">
-                            <img src="/static/images/portfolio/small/03.jpg" alt="">
-                            <div class="portfolio-overlay">
-                                <h4 class="text-white"><a href="portfolio-single-01.html"> Your title here </a></h4>
-                                <span class="text-white"> <a href="#"> Branding </a> | <a
-                                        href="#"> Web Design </a> </span>
-                            </div>
-                            <a class="popup portfolio-img" href="/static/images/portfolio/small/03.jpg"><i
-                                    class="fa fa-arrows-alt"></i></a>
-                        </div>
-                    </div>
-                    <div class="grid-item web-design photography">
-                        <div class="portfolio-item">
-                            <img src="/static/images/portfolio/small/05.jpg" alt="">
-                            <div class="portfolio-overlay">
-                                <h4 class="text-white"><a href="portfolio-single-01.html"> Your title here </a></h4>
-                                <span class="text-white"> <a href="#"> Branding </a> | <a
-                                        href="#"> Web Design </a> </span>
-                            </div>
-                            <a class="popup portfolio-img" href="/static/images/portfolio/small/05.jpg"><i
-                                    class="fa fa-arrows-alt"></i></a>
-                        </div>
-                    </div>
+                    {% endfor %}
                 </div>
             </div>
         </div>
