--- a/webmaerd/templates/success_page.html
+++ b/webmaerd/templates/success_page.html
@@ -59,19 +59,22 @@ action box- -->
         <div class="row">
             <div class="col-lg-12 col-md-12">
                 <div class="action-box-text">
-                    <h3><strong> Webster: </strong> The most powerful template ever on the market</h3>
-                    <p>Create tailor-cut websites with the exclusive multi-purpose responsive template along with
-                        powerful features.</p>
+                    <h3><strong> Webmaerd: </strong> Modern web development and web design</h3>
+                    <p>You can order website creation, web design, purchase and domain settings, help in placing the
+                        site on the hosting, assistance in setting up mail for your domain.</p>
                 </div>
                 <div class="action-box-button">
-                    <a class="button button-border white" href="#">
-                        <span>Purchase Now</span>
-                        <i class="fa fa-download"></i>
+                    <a class="button button-border white" href="/contact">
+                        <span>Contact US</span>
+                        <i class="fa fa-envelope-o"></i>
                     </a>
                 </div>
             </div>
         </div>
     </div>
 </section>
+
+<!--=================================
+action box- -->
 
 {% endblock %}
