--- a/webmaerd/static/css/shortcodes/section-title.css
+++ b/webmaerd/static/css/shortcodes/section-title.css
@@ -1,10 +1,6 @@
-
-/*Template:  Webster - Responsive Multi-purpose HTML5 Template
-Author: potenzaglobalsolutions.com
-Design and Developed by: potenzaglobalsolutions.com
-
-NOTE: This file contains Section titles CSS.*/
- 
+/*
+NOTE: This file contains Section titles CSS.
+*/
 
 /*************************
     Section title 1
