--- a/webmaerd/templates/index.html
+++ b/webmaerd/templates/index.html
@@ -220,6 +220,33 @@ most Awesome- -->
 <!--=================================
 most Awesome- -->
 
+<!--=================================
+action box- -->
+
+<section class="action-box theme-bg full-width">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 col-md-12">
+                <div class="action-box-text">
+                    <h3><strong> Webmaerd: </strong> Modern web development and web design</h3>
+                    <p>You can order website creation, web design, purchase and domain settings, help in placing the
+                        site on the hosting, assistance in setting up mail for your domain.</p>
+                </div>
+                <div class="action-box-button">
+                    <a class="button button-border white" href="/contact">
+                        <span>Contact US</span>
+                        <i class="fa fa-envelope-o"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!--=================================
+action box- -->
+
+
 {% endblock %}
 
 
